fix: change the row gap to accomodate small screens

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .container{
   padding: 1em;
   background:url(https://wallpaperaccess.com/full/1215990.jpg);
+  height: 100vh;
 }
 
 
