--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -103,7 +103,7 @@ button{
                             "e"
                             "f"
                             "g";
-    gap: 20px;                     
+    gap: 40px;                     
 }
 
 ul li:nth-of-type(1){
@@ -112,7 +112,7 @@ ul li:nth-of-type(1){
 
 ul li:nth-of-type(2){
     grid-area: b;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 ul li:nth-of-type(3){
     grid-area: c;
